--- a/package.json
+++ b/package.json
@@ -1,39 +1,23 @@
 {
 	"name": "create-node-project",
 	"version": "0.0.2",
-	"main": "index.js",
 	"repository": "git@github.com:mattdanielmurphy/create-node-project.git",
-	"author": "Matthew Daniel Murphy <matt@mattmurphy.ca>",
 	"license": "MIT",
+	"author": "Matthew Daniel Murphy <matt@mattmurphy.ca>",
+	"main": "index.js",
 	"bin": "index.js",
 	"scripts": {
 		"dev": "cd ~/Projects; rm -rf test-create-node-project; create-node-project test-create-node-project",
 		"lint": "eslint . --ext .ts"
 	},
-	"dependencies": {
-		"edit-json-file": "^1.6.0",
-		"eslint": "^7.22.0"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.13.10",
-		"@babel/core": "^7.13.10",
-		"@tsconfig/node14": "^1.0.0",
-		"@types/edit-json-file": "^1.4.0",
-		"@types/node": "^14.14.35",
-		"@typescript-eslint/eslint-plugin": "^4.18.0",
-		"@typescript-eslint/parser": "^4.18.0",
-		"jest": "^26.6.3",
-		"typescript": "^4.2.3"
-	},
 	"prettier": {
-		"singleQuote": true,
 		"jsxSingleQuote": true,
 		"semi": false,
+		"singleQuote": true,
 		"trailingComma": "all",
 		"useTabs": true
 	},
 	"eslintConfig": {
-		"root": true,
 		"parser": "@typescript-eslint/parser",
 		"plugins": [
 			"@typescript-eslint"
@@ -42,11 +26,26 @@
 			"eslint:recommended",
 			"plugin:@typescript-eslint/eslint-recommended",
 			"plugin:@typescript-eslint/recommended"
-		]
+		],
+		"root": true
 	},
 	"eslintIgnore": [
 		"node_modules",
 		"node_modules.nosync",
 		"dist"
-	]
+	],
+	"devDependencies": {
+		"@babel/cli": "^7.13.10",
+		"@babel/core": "^7.13.10",
+		"@tsconfig/node14": "^1.0.0",
+		"@types/edit-json-file": "^1.4.0",
+		"@types/node": "^14.14.35",
+		"@typescript-eslint/eslint-plugin": "^4.18.0",
+		"@typescript-eslint/parser": "^4.18.0",
+		"edit-json-file": "^1.6.0",
+		"eslint": "^7.22.0",
+		"jest": "^26.6.3",
+		"ts-jest": "^26.5.4",
+		"typescript": "^4.2.3"
+	}
 }
