--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@babel/core": "^7.13.10",
 		"@tsconfig/node14": "^1.0.0",
 		"@types/edit-json-file": "^1.4.0",
+		"@types/jest": "^26.0.22",
 		"@types/node": "^14.14.35",
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
 		"@typescript-eslint/parser": "^4.18.0",
