--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"main": "index.mjs",
 	"bin": "index.mjs",
 	"scripts": {
-		"lint": "eslint . --ext .ts"
+		"lint": "eslint . --ext .ts",
+		"test": "jest"
 	},
 	"prettier": {
 		"jsxSingleQuote": true,
